Refactor(LottoGame): 로또 번호 검증 로직을 Lotto 클래스로 위임하여 코드 간소화
- Lotto 객체 생성 시 로또 번호 검증을 포함하여 중복 검증 제거.
- inputWinningNumbers 메서드에서 당첨 번호 입력 시 Lotto 객체로 생성하여 자동 검증.
- validateBonusNumber 메서드에서 당첨 번호와 보너스 번호 중복 검사를 Lotto 객체를 사용하여 처리.
- 코드 가독성과 유지보수성을 향상시키기 위해 Lotto 클래스에 검증 로직 위임.